--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.3",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.3",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
@@ -24,6 +25,7 @@
     "cookies-next": "^4.3.0",
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.460.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^15.0.3",
     "next-themes": "^0.4.4",
     "react": "19.0.0-rc-66855b96-20241106",
