--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -30,8 +31,8 @@
     "multer": "^1.4.5-lts.1",
     "next": "^15.0.3",
     "next-themes": "^0.4.4",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "18",
     "react-icons": "^5.4.0",
     "sonner": "^1.7.1",
     "swiper": "^11.1.15",
