--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.460.0",
     "multer": "^1.4.5-lts.1",
     "next": "^15.0.3",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "18",
