--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^5.0.2",
+    "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.460.0",
     "multer": "^1.4.5-lts.1",
-    "next": "^15.0.3",
+    "next": "^15.1.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
