--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toast": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.62.8",
+    "@vercel/og": "^0.6.4",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
